# College-Football-Stats

./: LICENSE  README.md  cfbd-data.ipynb  colley-matrix.ipynb  pyproject.toml
